# vo_cbf

./: .gitignore  .gitmodules  requirements.txt  tb3_log.csv
mujoco_sims/: generate_scenarios.py  run.py  run_double_integrator.py  run_mpc_sh.py  run_mpc_vo.py  sh_cbf_core.py  test_fsh.py
mujoco_sims/assets/car/: diff_car.xml
mujoco_sims/controllers/: mpc_sh.py  mpc_vo.py  qp_3d.py  sh_cbf_core.py
mujoco_sims/scenarios/: double_integrator.xml
mujoco_sims/scenarios/multicar/: car.xml  (+3 more)
mujoco_sims/utils/: fsh.py  geometry.py  playback.py  robotimporter.py  scenebuilder.py  utils.py
ros_sim/: .gitignore
ros_sim/src/double_integrator_2d/: package.xml  setup.cfg  setup.py
ros_sim/src/double_integrator_2d/double_integrator_2d/: cbf_controller_node.py  controller_node.py  obstacles_node.py  sh_cbf_core.py  sim_node.py
ros_sim/src/double_integrator_2d/double_integrator_2d/core/: sh_cbf.py
ros_sim/src/double_integrator_2d/launch/: control.launch.py  obstacles.launch.py  sim_cbf_with_obstacles.launch.py  sim_with_obstacles.launch.py
ros_sim/src/double_integrator_2d/rviz/: double_integrator.rviz
scripts/: SHVO.m  b_finder.m  complete_computation.m  computations.m  compute_cbf.m  hyperbolic_vo.eps  sh_eqs.m  superhypebolic_vo.m  superhyperbolic_vo.m  symbolic_b.m  vo_cbf.m
scripts/py_sh_cbf/: sh_cbf_core.py  test.py
sims/: a.xml  generate_scenarios.py  run.py  run_c3bf_ugv.py  run_mpc_sh.py  run_simple_mpc.py  test_fsh.py
sims/controllers/: mpc_sh.py  mpc_vo.py  simple_mpc.py
sims/utils/: fsh.py  playback.py  robotimporter.py  scenebuilder.py  utils.py
(+12 files in other folders)
